B-F Sandbox Full-Backup/src/objects/Defect__c.object
<CustomObject>
    <description>A Defect represents a failure of the application to produce the expected results, as identified by a Test Case Step. Defects are associated to Test Case Steps and can be associated back to Requirements via the Defect Requirement Join object.</description>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TODAY() -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Work_Package_Name__c</fullName>
        <formula>Related_Application_Work_Package__r.Work_Package_Name__c</formula>
        <label>Application Work Package Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bug_Fix_Environment_Name__c</fullName>
        <label>Bug Fix Environment Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Defect_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned for debugging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved, ready for deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed, ready for re-test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted to Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected, not an issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected, standard Force.com feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Type__c</fullName>
        <description>Enter the type of UAT feedback being entered.</description>
        <inlineHelpText>Enter the type of UAT feedback being entered.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Defect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <label>Detailed Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impacted_Object__c</fullName>
        <label>Impacted Object</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion Line Items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasks/ Events</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Profile_s_Applicable__c</fullName>
        <description>User profiles applicable when defect was found during testing</description>
        <label>Profile(s) Applicable</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_test_Environment_Name__c</fullName>
        <label>Re-test Environment Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Application_Work_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Application Work Package</label>
        <referenceTo>Work_Package__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <description>Name of the person who submitted the defect.</description>
        <inlineHelpText>Please enter &lt;First Name&gt; &lt;Last Name&gt; without middle initial e.g. &quot;John Smith&quot;. Avoid just first or last names and nicknames</inlineHelpText>
        <label>Submitted By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <description>The Date the defect was first detected and submitted. Can be different from created date.</description>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Case_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Case Step</label>
        <referenceTo>Test_Case_Step__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Defect</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Defects</fullName>
        <columns>NAME</columns>
        <columns>Application_Work_Package_Name__c</columns>
        <columns>Summary__c</columns>
        <columns>Defect_Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Resolution__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Defect_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Defect_Type__c</field>
            <operation>equals</operation>
            <value>Defect</value>
        </filters>
        <label>All Defects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Enhancements</fullName>
        <columns>NAME</columns>
        <columns>Application_Work_Package_Name__c</columns>
        <columns>Summary__c</columns>
        <columns>Defect_Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Resolution__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Defect_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Defect_Type__c</field>
            <operation>equals</operation>
            <value>Enhancement</value>
        </filters>
        <label>All Enhancements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Defects</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Defect_Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Resolution__c</columns>
        <columns>Open_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Defects</label>
    </listViews>
    <listViews>
        <fullName>Product_Remediation_Defects</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Defect_Status__c</columns>
        <columns>Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Work_Package_Name__c</field>
            <operation>equals</operation>
            <value>Product Remediation</value>
        </filters>
        <label>Product Remediation Defects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Defect ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>